[gd_scene load_steps=15 format=2]

[ext_resource path="res://navdi2/AllSeeingControl/AllSeeingControl.gd" type="Script" id=1]
[ext_resource path="res://navdi2/Node Scripts/NavdiSettings.gd" type="Script" id=2]
[ext_resource path="res://navdi2/Node Scripts/NavdiViewerWindow.gd" type="Script" id=3]
[ext_resource path="res://00-core/TrainCar.tscn" type="PackedScene" id=4]
[ext_resource path="res://navdi2/Node Scripts/Pin/NavdiPinSetup.gd" type="Script" id=5]
[ext_resource path="res://navdi2/Node Scripts/Cursor/NavdiSuperCursor.gd" type="Script" id=6]
[ext_resource path="res://navdi2/Node Scripts/Cursor/NavdiCursorFollower.gd" type="Script" id=7]
[ext_resource path="res://art/temp_cursor.png" type="Texture" id=8]
[ext_resource path="res://00-core/TrainJamMaster.gd" type="Script" id=9]
[ext_resource path="res://01-droqen/TemplateMinigame.tscn" type="PackedScene" id=10]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -5.93296, 0, 0, Vector2( 0.431718, 0.0272727 ), 0.0, 0.0, 0, 0, Vector2( 0.773128, 0.0272727 ), -0.42331, -0.42331, 0, 0, Vector2( 1, 0 ), -0.20133, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.344978, 0.2 ), 0.473141, 0.473141, 0, 0, Vector2( 1, 1 ), 2.42879, 0.0, 0, 0 ]

[sub_resource type="GDScript" id=3]
script/source = "extends Sprite

var breath:float

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	breath += randf()*delta*4
	rotation = 0.1 * sin(breath)
"

[sub_resource type="GDScript" id=4]
script/source = "extends Node

export(bool)var hide_cursor = false

func _process(_delta):
	if hide_cursor and Rect2(Vector2.ZERO, get_viewport().size).has_point(get_viewport().get_mouse_position()):
		Input.set_mouse_mode(Input.MOUSE_MODE_HIDDEN)
	else:
		Input.set_mouse_mode(Input.MOUSE_MODE_VISIBLE)
"

[node name="trainJamCore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainJamMaster" type="Node" parent="."]
script = ExtResource( 9 )
test_microgame_scene = ExtResource( 10 )
viewport_slide_in = SubResource( 1 )
viewport_slide_out = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 232.0
margin_right = -220.0
margin_bottom = -198.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NavdiViewerWindow" type="Container" parent="MarginContainer"]
margin_right = 588.0
margin_bottom = 370.0
script = ExtResource( 3 )
viewport_scale = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NavdiViewerWindow"]
margin_left = 134.0
margin_top = 41.0
margin_right = 454.0
margin_bottom = 329.0
custom_constants/margin_right = -1
custom_constants/margin_top = -1
custom_constants/margin_left = -1
custom_constants/margin_bottom = -1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/NavdiViewerWindow/MarginContainer"]
margin_left = -1.0
margin_top = -1.0
margin_right = 321.0
margin_bottom = 289.0
color = Color( 0.894118, 0.811765, 0.0745098, 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="MarginContainer/NavdiViewerWindow"]
margin_left = 134.0
margin_top = 41.0
margin_right = 454.0
margin_bottom = 329.0
stretch = true
stretch_shrink = 2

[node name="Viewport" type="Viewport" parent="MarginContainer/NavdiViewerWindow/ViewportContainer"]
size = Vector2( 160, 144 )
handle_input_locally = false
render_target_update_mode = 3

[node name="DecorContainer" type="Container" parent="MarginContainer/NavdiViewerWindow"]
margin_left = 134.0
margin_top = 41.0
margin_right = 454.0
margin_bottom = 329.0

[node name="NavdiSettings" type="Node" parent="."]
script = ExtResource( 2 )
width = 1000
height = 800
zoom = 1
project_name = "magical-paradise-train"
bg_color = Color( 0.0941176, 0.564706, 0.654902, 1 )
UI_stretch_mode = true

[node name="NavdiPinSetup" type="Node" parent="."]
script = ExtResource( 5 )

[node name="NavdiSuperCursor" type="Node" parent="." groups=[
"SuperCursor",
]]
script = ExtResource( 6 )

[node name="TrainCar" parent="." instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 512, 400 )

[node name="NavdiCursorFollower" type="Node2D" parent="."]
script = ExtResource( 7 )
path_to_cursor = NodePath("../NavdiSuperCursor")

[node name="temp_cursor" type="Sprite" parent="NavdiCursorFollower"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( -1, -1 )
script = SubResource( 3 )

[node name="hide_curso" type="Node" parent="."]
script = SubResource( 4 )
